<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_browser_name">通用浏览器</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="menu_logs">转发日志</string>
    <string name="menu_senders">发送通道</string>
    <string name="menu_rules">转发规则</string>
    <string name="menu_settings">通用设置</string>
    <string name="menu_server">主动控制·服务端</string>
    <string name="menu_client">主动控制·客户端</string>
    <string name="menu_frpc">内网穿透·Frpc</string>
    <string name="menu_apps">应用列表·复制包名</string>
    <string name="menu_logcat">日志抓取·Logcat</string>
    <string name="menu_help">使用帮助</string>
    <string name="menu_about">关于软件</string>
    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="about_app_version">软件版本：%s</string>
    <string name="about_cache_size">缓存大小：%s</string>
    <string name="about_frpc_version">Frpc版本：%s</string>
    <string name="about_item_wechat_miniprogram">微信小程序</string>
    <string name="about_cache_purged">已清理缓存</string>
    <string name="about_frpc_deleted">已删除动态库，重启APP以便生效！</string>
    <string name="about_copyright">© %1$s PPPSCN All rights reserved.</string>
    <string name="about_item_open_source">开源仓库</string>
    <string name="about_item_github">GitHub</string>
    <string name="about_item_gitee">Gitee</string>
    <string name="about_item_donation_link">打赏名单</string>
    <string name="about_item_add_dingtalk_group">钉钉客户群</string>
    <string name="about_item_add_wework_group">企业微信群</string>
    <string name="about_item_add_qq_channel">QQ频道</string>
    <string name="url_project_github">https://github.com/pppscn/SmsForwarder</string>
    <string name="url_project_gitee">https://gitee.com/pp/SmsForwarder</string>
    <string name="url_help">https://gitee.com/pp/SmsForwarder/wikis/pages</string>
    <string name="url_donation_link">https://gitee.com/pp/SmsForwarder.wiki/raw/master/%E6%89%93%E8%B5%8F%E5%90%8D%E5%8D%95.md</string>
    <string name="url_dingtalk_group">https://gitee.com/pp/SmsForwarder/raw/main/pic/dingtalk.png</string>
    <string name="url_wework_group">https://gitee.com/pp/SmsForwarder/raw/main/pic/qywechat.png</string>
    <string name="url_qq_channel">https://qun.qq.com/qqweb/qunpro/share?_wv=3&amp;_wwv=128&amp;appChannel=share&amp;inviteCode=1W5aewP&amp;appChannel=share&amp;businessType=9&amp;from=246610&amp;biz=ka</string>
    <string name="url_wechat_miniprogram">https://gitee.com/pp/SmsForwarder/raw/main/pic/wechat_miniprogram.jpg</string>
    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_qq_app">是否允许页面打开"QQ"?</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。\n\n如果你不同意该政策，很遗憾我们将无法为你提供服务！</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number" tools:ignore="TypographyDashes">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password" tools:ignore="TypographyDashes">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>
    <string name="title_jump_login">跳过</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">你知道吗？</string>
    <string name="privacy">隐私政策</string>
    <string name="refresh_web">刷新网页</string>
    <string name="copy_link">复制链接</string>
    <string name="share_web">网页分享</string>
    <string name="open_in_default_browser">在浏览器打开</string>
    <string name="provided_by_agentweb">技术由 AgentWeb 提供</string>
    <string name="logo">Logo</string>
    <string name="action_add">添加</string>
    <string name="action_add_text">新建配置文本</string>
    <string name="action_add_url">从网址导入</string>
    <string name="action_add_file">从文件导入</string>
    <string name="action_add_scan">扫描二维码</string>
    <string name="action_save">保存配置</string>
    <string name="action_back">返回编辑</string>
    <string name="action_quit">放弃修改</string>
    <string name="action_test">测试规则</string>
    <string name="action_template">模板</string>
    <string name="title_save_config">保存Frpc配置</string>
    <string name="tips_input_config_content">请输入配置内容</string>
    <string name="tips_input_config_name">请输入配置名称</string>
    <string name="done">确定</string>
    <string name="tipSaveSuccess">保存成功</string>
    <string name="tipRestoreSuccess">还原成功</string>
    <string name="actionDeleteSuccess">已删除</string>
    <string name="actionDeleteFailed"> 删除失败</string>
    <string name="titleModifyFileName">修改文件名称</string>
    <string name="notOpened">未开启</string>
    <string name="hasOpened">已开启</string>
    <string name="notSelectIni">未选择配置文件</string>
    <string name="needStopService">请先关闭服务</string>
    <string name="title_about">关于</string>
    <string name="title_logcat">Logcat</string>
    <string name="noName">未命名</string>
    <string name="logcat_copy">复制</string>
    <string name="logcat_delete">删除</string>
    <string name="copySuccess">复制成功</string>
    <string name="titleTemplate">模板文件</string>
    <string name="dialogConfirmTitle">提示</string>
    <string name="configDeleteConfirm">确定删除该条配置？</string>
    <string name="tipServiceRunning">Frpc内网穿透服务运行中</string>
    <string name="tipWaitService">正在启动服务</string>
    <string name="app_name">短信转发器</string>
    <string name="notification_content">专业定制for八戒！\n内部使用，严禁泄露！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="discard">丢弃</string>
    <string name="quit">退出</string>
    <string name="del">删除</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="send">发送</string>
    <string name="test">测试</string>
    <string name="confirm">确认</string>
    <string name="all">全部</string>
    <string name="select">选择</string>
    <string name="clone">一键克隆</string>
    <string name="setting">通用设置</string>
    <string name="about">关于软件</string>
    <string name="help">使用帮助</string>
    <string name="clear_logs">清空日志</string>
    <string name="clear_history">清空记录</string>
    <string name="app_rule">通知转发规则</string>
    <string name="call_rule">通话转发规则</string>
    <string name="sms_rule">短信转发规则</string>
    <string name="add_rule">添加转发规则</string>
    <string name="edit_rule">编辑转发规则</string>
    <string name="clone_rule">克隆转发规则</string>
    <string name="add_sender">添加发送通道</string>
    <string name="edit_sender">编辑发送通道</string>
    <string name="clone_sender">克隆发送通道</string>
    <string name="restore_settings">还原配置</string>
    <string name="version">当前版本</string>
    <string name="check_for_updates">检查新版本</string>
    <string name="auto_startup">开机启动</string>
    <string name="show_tips">帮助提示</string>
    <string name="show_tips2">建议老鸟关闭提示，页面更清爽，减少弹窗提示</string>
    <string name="open_source">开源仓库</string>
    <string name="synchronize_mirror">同步镜像</string>
    <string name="qq_group">互帮互助QQ群</string>
    <string name="qq_group1">①群：562854376</string>
    <string name="qq_group2">②群：31330492</string>
    <string name="join_qq_group1">加入①群</string>
    <string name="join_qq_group2">加入②群</string>
    <string name="cache">缓存大小</string>
    <string name="purge">清除缓存</string>
    <string name="checking">检查中…</string>
    <string name="up_to_date">已是最新版本！</string>
    <string name="cache_purged">缓存清理完成</string>
    <string name="unknown_qq_version">未安装手Q或安装的版本不支持！</string>
    <string name="delete_log_title">日志删除确认</string>
    <string name="delete_log_tips">确定删除该条日志记录?</string>
    <string name="delete_log_toast">该条日志记录已经删除！</string>
    <string name="delete_type_log_tips">确定删除该分类的所有日志记录?</string>
    <string name="delete_type_log_toast">该分类日志记录已经清空！</string>
    <string name="resend_toast">正在尝试通过原发送通道重发</string>
    <string name="rematch_toast">正在重新匹配规则发送</string>
    <string name="details">详情</string>
    <string name="clear_logs_tips">确定要清空所有转发记录吗？</string>
    <string name="pull_tips">下拉可以刷新！</string>
    <string name="release_tips">松开可以刷新！</string>
    <string name="reflashing_tips">正在刷新…</string>
    <string name="setrule">设置短信转发规则</string>
    <string name="setrule_call">设置来电转发规则</string>
    <string name="setrule_app">设置APP通知转发规则</string>
    <string name="delete_rule_title">转发规则操作确认</string>
    <string name="delete_rule_tips">删除转发规则后会级联删除其相关的转发日志的所有记录！\n\n确定删除该条规则?</string>
    <string name="delete_rule_toast">该条规则已经删除！</string>
    <string name="new_sender_first">请选择发送通道（若无，请先添加）</string>
    <string name="add_sender_first">请先去设置发送通道页面添加</string>
    <string name="select_sender">发送通道</string>
    <string name="rule_tester">转发规则测试</string>
    <string name="test_sim_slot">测试模拟的接收卡槽</string>
    <string name="test_phone_number">测试模拟的来源号码</string>
    <string name="test_msg_content">测试模拟的短信内容</string>
    <string name="test_package_name">测试模拟的APP包名</string>
    <string name="test_inform_title">测试模拟的通知标题</string>
    <string name="test_inform_content">测试模拟的通知内容</string>
    <string name="sender_logic">执行逻辑</string>
    <string name="sender_logic_all">全部执行</string>
    <string name="sender_logic_until_fail">失败即止</string>
    <string name="sender_logic_until_success">成功即止</string>
    <string name="match_sim_slot">匹配卡槽</string>
    <string name="match_field">匹配字段</string>
    <string name="phone_number">手机号</string>
    <string name="package_name">APP包名</string>
    <string name="sms_content">短信内容</string>
    <string name="inform_content">通知内容</string>
    <string name="multiple_matches">多重匹配</string>
    <string name="match_type">匹配模式</string>
    <string name="btn_is">是</string>
    <string name="btn_contain">包含</string>
    <string name="btn_not_contain">不包含</string>
    <string name="btn_start_with">开头</string>
    <string name="btn_end_with">结尾</string>
    <string name="btn_regex">正则匹配</string>
    <string name="match_value">匹配的值</string>
</resources>