<?xml version="1.0" encoding="utf-8"?><!--侧边栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_tab"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_menu_logs"
            android:title="@string/menu_logs" />

        <item
            android:id="@+id/nav_rule"
            android:icon="@drawable/ic_menu_rule"
            android:title="@string/menu_rules" />

        <item
            android:id="@+id/nav_sender"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_senders" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

    </group>
    <group
        android:id="@+id/other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_server"
            android:checkable="false"
            android:icon="@drawable/ic_menu_server"
            android:title="@string/menu_server" />
        <item
            android:id="@+id/nav_client"
            android:checkable="false"
            android:icon="@drawable/ic_menu_client"
            android:title="@string/menu_client" />

    </group>


</menu>
